--- a/src/variables.modules.scss
+++ b/src/variables.modules.scss
@@ -1,7 +1,7 @@
 $purple: #8D53FF;
 $pink: #CA6BE6;
 $white: #f8f8f8;
-$dark: #1f1f1f;
+$dark: #343541;
 $red: #FF6057;
 $yellow: #FFBD2E;
 $green: #27C93F;
